--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.4.0'
         classpath ("com.google.dagger:hilt-android-gradle-plugin:2.48.1")
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.7.5")
+        classpath ("com.google.dagger:hilt-android-gradle-plugin:2.48.1")
     }
     repositories {
         google()
@@ -13,5 +15,6 @@ plugins {
     id 'com.android.application' version '8.3.0' apply false
     id 'com.android.library' version '8.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+
 
 }
